Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1047

Fix some error messages in mkfs.lustre to use strerror

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.3.0
    • None
    • None
    • 3
    • 4674

      Seen in the lab:

      00:51:50:00:51:50:fat-intel-3vm3: mkfs.lustre: Unable to create backing store: 2
      00:51:50:00:51:50:fat-intel-3vm3: mkfs.lustre: Unable to truncate backing store: 2

            johann Johann Lombardi (Inactive)
            johann Johann Lombardi (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: