LU-1047 utils: mkfs shouldn't create loopback files in /dev

When the target device does not exist, mkfs.lustre shouldn't assume
that the user wants to create a loopback file under /dev.

This patch also fixes some error msgs printed by mkfs.lustre:
mkfs.lustre: Unable to create backing store: 2
mkfs.lustre: Unable to truncate backing store: 2

to be instead:
mkfs.lustre: Unable to create backing store: No such file or directory
mkfs.lustre: Unable to truncate backing store: No such file or
             directory

Signed-off-by: Johann Lombardi <johann@whamcloud.com>
Change-Id: I5f4393a47d06e5b7bde7745b38a938dcd2eb7ecd
Reviewed-on: http://review.whamcloud.com/2035
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Tested-by: Hudson
Reviewed-by: Yu Jian <yujian@whamcloud.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>